<resources>
    <string name="app_name">Session3 FireBase</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="donthaveanaccount">Don\'t Have Account</string>
    <string name="login">Login !</string>
    <string name="signup">SignUp !</string>
    <string name="alreadyhaveanaccount">Already Have an Account!</string>
</resources>