<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginTop="212dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/RepeatPassword"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/input_fields"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="text"
        android:padding="6dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColor="@color/black"
        android:textColorHint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="@+id/Password" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/input_fields"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="6dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColor="@color/black"
        android:textColorHint="#A9A9A9"
        app:layout_constraintBottom_toTopOf="@+id/RepeatPassword"
        app:layout_constraintEnd_toEndOf="@+id/Username"
        app:layout_constraintStart_toStartOf="@+id/Username" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/input_fields"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="6dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColor="@color/black"
        android:textColorHint="#A9A9A9"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="@+id/Email"
        app:layout_constraintStart_toStartOf="@+id/Email" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/input_fields"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="6dp"
        android:shadowColor="@color/black"
        android:shadowDy="4"
        android:textColor="@color/black"
        android:textColorHint="#A9A9A9"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/alreadyhaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/alreadyhaveanaccount"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/RepeatPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/RepeatPassword" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#DB3E0B"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/RepeatPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/RepeatPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>