<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginTop="212dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <EditText
        android:id="@+id/email"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginBottom="364dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:inputType="text"
        android:padding="6dp"
        android:hint="@string/email"
        android:textColorHint="#A9A9A9"
        android:textColor="@color/black"
        android:shadowDy="4"
        android:shadowColor="@color/black"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="36dp"
        android:layout_marginBottom="292dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:inputType="text"
        android:padding="6dp"
        android:hint="@string/password"
        android:textColorHint="#A9A9A9"
        android:shadowDy="4"
        android:textColor="@color/black"
        android:shadowColor="@color/black"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/donthaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:text="@string/donthaveanaccount"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#DB3E0B"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>